Adjust resize values
- Changed grid width values from variable to fixed for large and extra large screens.

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,4 @@
 #activities-grid {
-    --ion-grid-width-lg: 60%;
-    --ion-grid-width-xl: 60%;
+    --ion-grid-width-lg: 900px;
+    --ion-grid-width-xl: 1000px;
 }
