Risk analysis matrix UI WIP
- Added page for testing slider and button UI. Page is barebones to get an idea of what it will look like and modal with slider UI is still being worked on.

- Changed tape colour to orange on white instead of orange on black.

--- a/src/components/ActivityCard.css
+++ b/src/components/ActivityCard.css
@@ -8,7 +8,7 @@
     padding: 10px;
     min-height: 200px;
     color: white;
-    --background: var(--primaryBP);
+    background-color: var(--primaryBP);
     border-radius: 15px;
 }
 /** Ion Header and content containers */
