Fixed button styles
- Button styles in footer have been removed from <IonButtons> element as they are not the direct child of <IonToolbar>

- Fixed styles to display grey button and white text on both platforms.

- Fixed slider handle changing width in different screen sizes (Handle now sizes to full height of container instead of fixed value).

- Added gradient background slider to Firefox

- Handle in iOS is broken, must be addressed.

--- a/src/components/RiskModal.css
+++ b/src/components/RiskModal.css
@@ -85,7 +85,7 @@
 }
 .footer-buttons ion-button {
     margin: 5px;
-    background-color: var(--logoGrey);
-    color: white !important;
+    --background: var(--logoGrey);
+    color: white;
     border-radius: 5px;
 }
