--- a/src/components/SliderStyles.css
+++ b/src/components/SliderStyles.css
@@ -21,7 +21,7 @@
 .vertical-slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 10%;
-    aspect-ratio: 1 / 1;
+    height: 100%;
     background-color: black;
     -webkit-mask-image: url(../../public/assets/ui_images/slider-thumb.png);
     mask-image: url(../../public/assets/ui_images/slider-thumb.png);
@@ -36,7 +36,7 @@
 .vertical-slider::-moz-range-thumb {
     appearance: none;
     width: 10%;
-    height: 50px;
+    height: 100%;
     background-color: black;
     mask-image: url(../../public/assets/ui_images/slider-thumb.png);
     mask-position: center;
@@ -62,5 +62,8 @@
     width: 100%;
     height: 100%;
     background-color: gainsboro;
+    background: 
+        linear-gradient(90deg, rgba(255, 255, 255, 0) var(--sliderPercentage), rgba(150, 150, 150, 255) var(--sliderPercentage)),
+        linear-gradient(90deg, rgba(0,206,1,1) 0%, rgba(127,231,25,1) 25%, rgba(254,255,48,1) 50%, rgba(254,128,24,1) 75%, rgba(254,0,0,1) 100%);
     cursor: pointer;
 }
