Added rating buttons
- Added buttons to right of slider to indicate rating selected by slider.

- Removed temporary box shadow styling on container borders.

- Buttons and slider don't do anything as of yet.

- Added android build folder to git ignore.

- Installed missing capacitor package.

--- a/src/components/RiskModal.css
+++ b/src/components/RiskModal.css
@@ -42,9 +42,9 @@
     --padding-bottom: 10px;
     --padding-start: 10px;
 }
-.risk-modal ion-content div {
+/* .risk-modal ion-content > div > div {
     box-shadow: 0 0 5px greenyellow;
-}
+} */
 /** Consequence/likelihood question */
 .risk-question {
     font-size: 1.5rem;
@@ -55,25 +55,64 @@
     height: 95%;
     display: flex;
     justify-content: center;
+    gap: 10px;
 }
-/** First box (slider) */
-.selection-ui-container > div:nth-child(1) {
+/** Slider container */
+.slider-container {
     height: 100%;
     aspect-ratio: 1 / 10;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 5px blue;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(150, 150, 150);
     border-radius: 10px;
     overflow: hidden;
 }
 /* ? Slider styles moved to separate file for readability */
-/** Second box (cards) */
-.selection-ui-container div:nth-child(2) {
+/** Ratings container */
+.ratings-container {
     height: 100%;
-    width: 100px;
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-
+/** Rating button  */
+.ratings-container > div {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 4px 3px 5px rgba(150, 150, 150, 0.5);
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(150, 150, 150);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.1s;
+}
+.ratings-container > div:hover {
+    filter: brightness(1.2);
+}
+.ratings-container > div:active {
+    box-shadow: 0px 0px 0px rgba(150, 150, 150, 0.5);
+    transform: translate(1px, 1px) scale(0.99);
+}
+.ratings-container > div:nth-child(1) { background-color: rgba(254,0,0,1);}
+.ratings-container > div:nth-child(2)  { background-color: rgba(254,128,24,1);}
+.ratings-container > div:nth-child(3) { background-color: rgba(254,255,48,1);}
+.ratings-container > div:nth-child(4) { background-color: rgba(127,231,25,1);}
+.ratings-container > div:nth-child(5) { background-color: rgba(0,206,1,1);}
+/** Text inside rating buttons */
+.ratings-container > div > span {
+    color: black;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
 /* ########## */
 /* # Footer # */
 /* ########## */
