--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -36,6 +36,28 @@
 #nav-bar ion-icon {
     color: var(--logoGrey);
 }
+/* ! EXPERIMENTAL MENU BUTTON  */
+#menu-button {
+    margin-right: 10px;
+    width: 45px;
+    height: 35px;
+    --padding-start: 0;
+    --padding-end: 0;
+    --border-radius: 0;
+}
+#lines-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+#lines-container div {
+    flex-grow: 1;
+}
+#lines-container div:nth-child(odd) {
+    width: 100%;
+    background-color: var(--primaryBP);
+}
 /** Tape */
 #tape-div {
     width: 100%;
