--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -12,25 +12,36 @@
     align-items: center;
     gap: 10px;
 }
-/** Variable picture depending on screen size */
-#title-container picture {
-    height: 100%;
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* ! Experimental stacked icon ! */
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/** Container for stacked icon UI */
+#icon-grid {
+    display: grid;
+    height: 50px;
+    width: 50px;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
 }
-@media (min-width: 992px) {
-    #title-container picture {
-        padding-right: 15px;
-        border-right-style: solid;
-        border-right-color: var(--logoGrey);
-    }
+#icon-grid > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background-color: var(--primaryBPTint);
 }
-#title-container img {
-    height: 100%;
+#icon-grid > div > img {
+    height: 50%;
 }
+/** Icon layers */
+.full-icon { grid-area: 1 / 1 / 4 / 4; }
+.lower-icon { grid-area: 1 / 1 / 3 / 3; }
+.upper-icon { grid-area: 2 / 2 / 4 / 4; }
+
+
 /** Onsite safety title */
-#title-container h1 {
-    margin: 0;
-    font-weight: bold;
-    color: var(--logoGrey);
+#oss-title-text {
+    height: 80%;
 }
 /** Navigation icons (Home and menu) */
 #nav-bar ion-icon {
