--- a/src/pages/StackedIcons.css
+++ b/src/pages/StackedIcons.css
@@ -4,3 +4,9 @@
 #return-header a {
     font-size: 12px;
 }
+
+/* Modal for stacked page */
+#stacked-modal {
+    --width: 100vw;
+    --min-height: 100vh;
+}
